<resources>
    <string name="app_name">VideoScreenDemo</string>
    <string name="sure">确定</string>
    <string name="back">返回</string>
    <string name="unknow_error">未知错误</string>
    <string name="network_disable">网络不可用</string>
    <string name="call_reject">拒接</string>
    <string name="call_answer">接听</string>
    <string name="room_prepare">Waiting for attendees</string>
    <string name="room_button_one">Mute</string>
    <string name="room_button_two">Speaker</string>
    <string name="room_button_three">Camera Off</string>
    <string name="room_button_four">Switch Camera</string>
    <string name="network_error">No network connection, please check your network</string>
    <string name="error_101">Invalid vendor key</string>
    <string name="vendor_key">cbfd193f2d18430687ff045616617692</string>


</resources>
