<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >
    <!--本地通话 和 远程通话用户头像列表-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">


        <FrameLayout
            android:id="@+id/user_local_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/yellow" />


        <ImageView
            android:id="@+id/user_local_voice_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_room_bg" />


        <LinearLayout
            android:id="@+id/user_remote_views"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:orientation="horizontal" />

        <TextView
            android:id="@+id/app_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/room_prepare"
            android:textColor="@color/white"
            android:textSize="18sp" />


        <Button
            android:id="@+id/action_hung_up"
            android:layout_width="36dp"
            android:layout_height="36dp"


            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_selector_hung_up" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/top_actions_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/grey"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:visibility="visible"
        >

        <!--静音-->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/action_muter"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:checked="true"
                android:button="@drawable/shape_transparent"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/room_button_one"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>


        <!--扬声器-->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/action_speaker"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:checked="false"
                android:button="@drawable/shape_transparent" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/room_button_two"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>


        <!--关闭摄像头-->
        <LinearLayout
            android:id="@+id/wrapper_action_camera_enabler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/action_camera_enabler"
                android:layout_width="35dp"
                android:checked="true"
                android:layout_height="35dp"
                android:button="@drawable/shape_transparent"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/room_button_three"
                android:textColor="@color/white"
                android:textSize="10sp" />

        </LinearLayout>


        <!--切换摄像头-->
        <LinearLayout
            android:id="@+id/wrapper_action_camera_switcher"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <CheckBox
                android:id="@+id/action_camera_switcher"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:checked="true"
                android:button="@drawable/shape_transparent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/room_button_four"
                android:textColor="@color/white"
                android:textSize="10sp" />


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
